# gemini-agents-travel-graph

./: .env.example  .gitignore  README.md  demo_assistant.py  handler.py  prefs.json  pyproject.toml  rate_limit_config.example.json  requirements-dev.txt  requirements.txt
tests/: __init__.py  conftest.py
tests/unit/: conftest.py  mock_gemini.py  mock_langgraph.py  test_ab_testing.py  test_anonymizer.py  test_base_agent.py  test_cache_service.py  test_context_builder.py  test_conversation_agent.py  test_conversation_models.py  test_conversation_service.py  test_dynamodb.py  test_handler.py  test_minimal.py  test_moderation.py  test_parallel.py  test_place_service.py  test_preferences.py  test_prompt_templates.py  test_recommendation_agent.py  test_repository.py  test_state_graph.py  test_token_tracker.py  test_workflow.py
travel_planner/: __init__.py  config.py  main.py
travel_planner/agents/: __init__.py  accommodation.py  activity_planning.py  base.py  budget_management.py  conversation.py  destination_research.py  flight_search.py  orchestrator.py  recommendation.py  research_tools.py  transportation.py
travel_planner/browser/: automation.py  caching.py  error_recovery.py
travel_planner/data/: conversation_models.py  dynamodb.py  models.py  preferences.py  repository.py
travel_planner/orchestration/: __init__.py  checkpoint.py  parallel.py  state_graph.py  workflow.py
travel_planner/prompts/: __init__.py  context.py  moderation.py  templates.py
travel_planner/services/: __init__.py  ab_testing.py  anonymizer.py  cache_service.py  conversation_service.py  (+2 more)
(+30 files in other folders)
